data/derived/sp14/progs/unify/prog1020.ml.out
Characters 450-454:
  in max' -1.0 (min 1.0 (2.71 ** ((sin (pi *. eval (a, x, y))) +. (cos (pi *. eval(b, x, y))) -. 1.0) -. 1.0))
     ^^^^
Error: This expression has type 'a -> 'a -> 'a
       but an expression was expected of type int
